--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e33</color>
-    <color name="colorPrimaryDark">#c33</color>
+    <color name="colorPrimary">#c00</color>
+    <color name="colorPrimaryDark">#a00</color>
     <color name="colorAccent">#3c3</color>
 </resources>
